--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^5.0.0",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.32.2",
     "react-scroll-parallax": "^2.4.0"
   },
   "devDependencies": {
