--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.32.2",
-    "react-scroll-parallax": "^2.4.0"
+    "react-scroll-parallax": "^2.4.0",
+    "react-scroll-trigger": "^0.6.10"
   },
   "devDependencies": {
     "eslint": "7.32.0",
