--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^5.0.0",
+    "hamburger-react": "^2.4.1",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
